Grace/tests/gibbs/errors/t247.grace
// ERROR = P1018
if(true) then {
